--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     {% load static %}
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <link href="https://file.myfontastic.com/3b3ESU8AsYhtxDfNypk6JY/icons.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'navbar.css' %}">
-
+    <link rel="stylesheet" type="text/css" href="{% static 'app.css' %}">
 </head>
 <body>
 <div id="top-bar">
@@ -27,10 +27,9 @@
 <div class="top-bar-social social section" id="top-bar-social" name="Social Top"><div class="widget LinkList" data-version="2" id="LinkList73">
 <div class="widget-content">
 <ul>
-<li class="facebook"><a href="https://fb.com/soratemplates" target="_blank" title="facebook"></a></li>
-<li class="twitter"><a href="#" target="_blank" title="twitter"></a></li>
-<li class="instagram"><a href="#" target="_blank" title="instagram"></a></li>
-<li class="pinterest"><a href="#" target="_blank" title="pinterest"></a></li>
+<li ><a href="https://fb.com/soratemplates" target="_blank" title="facebook"><i class="facebook"></i></a></li>
+<li ><a href="#" target="_blank" title="twitter"><i class="facebook"></i></a></li>
+<li ><a href="#" target="_blank" title="instagram"><i class="facebook"></i></a></li>
 </ul>
 </div>
 </div></div>
@@ -38,17 +37,40 @@
 </div>
 
 <div class="main-menu section" id="main-menu" name="Main Menu"><div class="widget LinkList show-menu" data-version="2" id="LinkList74">
+
 <ul id="main-menu-nav" role="menubar">
- <li><a href="/" role="menuitem">Logo</a></li>
+<li>      <a class="header-image-wrapper" href="https://flexblog-templatesyard.blogspot.com/">
+<img alt="FlexBlog" data-height="50" data-width="193" src="//1.bp.blogspot.com/-1yEpsWpEyLo/XT6Rd6E9zvI/AAAAAAAAHAU/i9nCDhzLJMUkCjE33RzCt_j7xftp35yYACK4BGAYYCw/s1600/FlexMag%2BLogo%2B.png">
+</a></li>
 <li><a href="/" role="menuitem">Home</a></li>
 
 </ul>
 </div></div>
 
-
-
+<main role="main" class="container">
+<div class="row">
+<div class="col-md-8">
 {% block content %}
 
 {% endblock %}
+</div>
+<div class="col-md-4">
+      <div class="content-section">
+        <h3>Popular Posts</h3>
+          <ul class="list-group">
+            <li class="list-group-item list-group-item-light">Instagram feed</li>
+          </ul>
+        </p>
+          <div class="content-section">
+        <h3>Instagram feed</h3>
+        </p>
+      </div>
+    </div>
+      </div>
+    </div>
+
+</div>
+
+</main>
 </body>
 </html>
