--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href="https://file.myfontastic.com/3b3ESU8AsYhtxDfNypk6JY/icons.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static 'navbar.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'app.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'style/navbar.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'style/app.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'style/posts.css' %}">
 </head>
 <body>
 <div id="top-bar">
@@ -42,8 +43,7 @@
 <li>      <a class="header-image-wrapper" href="https://flexblog-templatesyard.blogspot.com/">
 <img alt="FlexBlog" data-height="50" data-width="193" src="//1.bp.blogspot.com/-1yEpsWpEyLo/XT6Rd6E9zvI/AAAAAAAAHAU/i9nCDhzLJMUkCjE33RzCt_j7xftp35yYACK4BGAYYCw/s1600/FlexMag%2BLogo%2B.png">
 </a></li>
-<li><a href="/" role="menuitem">Home</a></li>
-
+<li><a href="{% url 'home' %}">Home</a></li>
 </ul>
 </div></div>
 
@@ -56,21 +56,29 @@
 </div>
 <div class="col-md-4">
       <div class="content-section">
-        <h3>Popular Posts</h3>
+        <h3>Popular posts</h3>
           <ul class="list-group">
-            <li class="list-group-item list-group-item-light">Instagram feed</li>
+            <li class="list-group-item list-group-item-light">Blog Post 1</li>
           </ul>
-        </p>
-          <div class="content-section">
+      </div>
+    <div class="content-section">
         <h3>Instagram feed</h3>
-        </p>
-      </div>
     </div>
-      </div>
+    <div class="content-section">
+        <h3>Tags cloud</h3>
     </div>
+    <div class="content-section">
+        <h3>Categories</h3>
+    </div>
+</div>
+</div>
 
 </div>
 
 </main>
+
+<footer>
+    Blog
+</footer>
 </body>
 </html>
