--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html"%} {% block content %}
+<article class="media content-section">
+  <div class="media-body">
+    <h2 class="post_title">{{post.title}}</h2>
+    <div class="article-metadata">
+      <p class="mr-2" href="#">
+        writer:{{ post.author }} on {{ post.date_posted |date:"F d Y" }}
+      </p>
+    </div>
+    <p class="article-content">{{ post.content }}</p>
+  </div>
+</article>
+{% endblock %}
