--- a/static/style/posts.css
+++ b/static/style/posts.css
@@ -1,20 +1,10 @@
-.site-header .navbar-nav .nav-link {
-  color: #cbd5db;
-}
-
-.site-header .navbar-nav .nav-link:hover {
-  color: #ffffff;
-}
-
-.site-header .navbar-nav .nav-link.active {
-  font-weight: 500;
-}
-.article-title {
-  color: #444444;
+card-title a {
+  color: #343a40;
   text-decoration: none;
 }
-
-a.article-title:hover {
-  color: #428bca;
-
+.card-footer.text-muted a {
+  text-decoration: none;
+}
+h2.card-title a:hover {
+  color: #0d6efd;
 }
