--- a/templates/base.html
+++ b/templates/base.html
@@ -10,75 +10,127 @@
     <link rel="stylesheet" type="text/css" href="{% static 'style/navbar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'style/app.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'style/posts.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'style/forms.css' %}">
 </head>
 <body>
-<div id="top-bar">
-<div class="container row">
-<div class="top-bar-nav section" id="top-bar-nav" name="Top Navigation"><div class="widget LinkList" data-version="2" id="LinkList72">
-<div class="widget-content">
-<ul>
-<li><a href="{% url 'home' %}">Home</a></li>
-<li><a href="{% url 'about' %}">About</a></li>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="{% url 'home' %}">Home </a>
+    </div>
+  </div>
+</nav>
 
-<li><a href="{% url 'contact' %}">Contact</a></li>
-</ul>
-</div>
-</div></div>
-<!-- Top Social -->
-<div class="top-bar-social social section" id="top-bar-social" name="Social Top"><div class="widget LinkList" data-version="2" id="LinkList73">
-<div class="widget-content">
-<ul>
-<li ><a href="https://fb.com/soratemplates" target="_blank" title="facebook"><i class="facebook"></i></a></li>
-<li ><a href="#" target="_blank" title="twitter"><i class="facebook"></i></a></li>
-<li ><a href="#" target="_blank" title="instagram"><i class="facebook"></i></a></li>
-</ul>
-</div>
-</div></div>
-</div>
-</div>
-
-<div class="main-menu section" id="main-menu" name="Main Menu"><div class="widget LinkList show-menu" data-version="2" id="LinkList74">
-
-<ul id="main-menu-nav" role="menubar">
-<li>      <a class="header-image-wrapper" href="https://flexblog-templatesyard.blogspot.com/">
-<img alt="FlexBlog" data-height="50" data-width="193" src="//1.bp.blogspot.com/-1yEpsWpEyLo/XT6Rd6E9zvI/AAAAAAAAHAU/i9nCDhzLJMUkCjE33RzCt_j7xftp35yYACK4BGAYYCw/s1600/FlexMag%2BLogo%2B.png">
-</a></li>
-<li><a href="{% url 'home' %}">Home</a></li>
-</ul>
-</div></div>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="navbarResponsive" style="">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'home' %}">Home
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'about' %}">About</a>
+          </li>
+                    <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 <main role="main" class="container">
 <div class="row">
-<div class="col-md-8">
+<div class="container col-md-8">
 {% block content %}
 
 {% endblock %}
 </div>
-<div class="col-md-4">
-      <div class="content-section">
-        <h3>Popular posts</h3>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-light">Blog Post 1</li>
-          </ul>
+      <!-- Sidebar Widgets Column -->
+      <div class="col-md-4">
+
+        <!-- Search Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Search</h5>
+          <div class="card-body">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for...">
+              <span class="input-group-append">
+                <button class="btn btn-secondary" type="button">Go!</button>
+              </span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Categories Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Categories</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a href="#">Web Design</a>
+                  </li>
+                  <li>
+                    <a href="#">HTML</a>
+                  </li>
+                  <li>
+                    <a href="#">Freebies</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a href="#">JavaScript</a>
+                  </li>
+                  <li>
+                    <a href="#">CSS</a>
+                  </li>
+                  <li>
+                    <a href="#">Tutorials</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Side Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Side Widget</h5>
+          <div class="card-body">
+            You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
+          </div>
+        </div>
+
       </div>
-    <div class="content-section">
-        <h3>Instagram feed</h3>
-    </div>
-    <div class="content-section">
-        <h3>Tags cloud</h3>
-    </div>
-    <div class="content-section">
-        <h3>Categories</h3>
-    </div>
-</div>
-</div>
 
-</div>
+    </div>
+    <!-- /.row -->
 
+  </div>
+  <!-- /.container -->
+
+  
 </main>
+<!-- Footer -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    </div>
+    <!-- /.container -->
+  </footer>
 
-<footer>
-    Blog
-</footer>
+
 </body>
 </html>
