--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,30 @@
-{% extends "base.html"%} {% block content %} {%for post in posts%}
-<article class="media content-section">
-  <div class="media-body">
-    <h2>
-      <a class="article-title" href="{% url 'blog' post.post_id %}"
-        >{{ post.title }}</a
-      >
-    </h2>
-    <div class="article-metadata">
-      <a class="mr-2" href="#">{{ post.author }}</a>
-      <small class="text-muted">{{ post.date_posted |date:"F d Y" }}</small>
+{% extends "base.html"%} {% block content %}
+<div class="row">
+  {%for post in posts%}
+  <!-- Blog Entries Column -->
+  <div class="col-md-12">
+    <!-- Blog Post -->
+    <div class="card mb-4">
+      <img
+        class="card-img-top"
+        src="http://placehold.it/750x300"
+        alt="Card image cap"
+      />
+      <div class="card-body">
+        <h2 class="card-title">
+          <a href="{% url 'post' post.post_id %}">{{post.title}}</a>
+        </h2>
+        <p class="card-text">{{post.content}}</p>
+        <a href="{% url 'post' post.post_id %}" class="btn btn-primary"
+          >Read More &rarr;</a
+        >
+      </div>
+      <div class="card-footer text-muted">
+        Posted on {{ post.date_posted |date:"F d, Y" }} by
+        <a href="#">{{post.author}}</a>
+      </div>
     </div>
-    <p class="article-content">{{ post.content }}</p>
   </div>
-</article>
-{% endfor %} {% endblock %}
+  {% endfor %}
+</div>
+{% endblock %}
