--- a/static/style/app.css
+++ b/static/style/app.css
@@ -9,7 +9,9 @@ body {
   margin: 0;
   padding: 0;
 }
-
+body a {
+  text-decoration: none;
+}
 .content-section {
   background: #ffffff;
   padding: 10px 20px;
@@ -20,6 +22,11 @@ body {
 main {
   margin-top: 3% !important;
   margin-bottom: 3% !important;
+}
+@media (min-height: 992px) {
+  main {
+    height: 80vh;
+  }
 }
 footer {
   display: block;
