--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"-->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://file.myfontastic.com/3b3ESU8AsYhtxDfNypk6JY/icons.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static 'style/navbar.css' %}">
@@ -42,7 +43,16 @@
           </li>
                     <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
+          </li >
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="#">username:{{user.username}}</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">logout</a>
+            </li>
+
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -130,7 +140,8 @@
     </div>
     <!-- /.container -->
   </footer>
-
-
+<script src="{% static 'javascript/menu.js' %}"></script>
+{% block js %}
+{% endblock js%}
 </body>
 </html>
