--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html"%} {% block content %}
+{% extends "base.html"%} {% block content %} {% load static %}
 <div class="row">
   {%for post in posts%}
   <!-- Blog Entries Column -->
@@ -27,4 +27,6 @@
   </div>
   {% endfor %}
 </div>
-{% endblock %}
+{% endblock %} {% block js %}
+<script src="{% static 'javascript/shortText.js' %}"></script>
+{% endblock js%}
