--- a/templates/blog.html
+++ b/templates/blog.html
@@ -10,9 +10,13 @@
     <p class="article-content">{{ post.content }}</p>
   </div>
   <div id="author-info">
-    <div id="author-name">{{author}}</div>
-    <div id="author-desc">random text about the author</div>
+    <img src="{{img}}" />
+    <div id="author-bio">
+      <div id="author-name">{{author}}</div>
+      <div id="author-desc">random text about the author</div>
+    </div>
   </div>
+  <div id="comments">0 comments</div>
 </article>
 <style>
   article.media.content-section {
@@ -21,6 +25,21 @@
   #author-name {
     color: #343a40;
     font-weight: bold;
+  }
+  div#author-info {
+    display: flex;
+  }
+  div#author-info {
+    display: flex;
+    margin-bottom: 2%;
+    width: 100%;
+    padding: 1%;
+  }
+  div#author-info img {
+    margin-right: 2%;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
   }
 </style>
 {% endblock %}
