--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="navbar-collapse collapse" id="navbarResponsive" style="">
+      <div class="navbar-collapse collapse" id="navbarResponsive" >
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'home' %}">Home
@@ -50,6 +50,10 @@
           </li>
           <li class="nav-item">
               <a class="nav-link" href="{% url 'logout' %}">logout</a>
+            </li>
+          {% else %}
+        <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">login</a>
             </li>
 
           {% endif %}
