--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'style/app.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'style/posts.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'style/forms.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'javascript/forms-style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'javascript/forms-style.js' %}">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
