--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'style/app.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'style/posts.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'style/forms.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'javascript/forms-style.js' %}">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -146,6 +145,7 @@
     <!-- /.container -->
   </footer>
 <script src="{% static 'javascript/menu.js' %}"></script>
+<script src="{% static 'javascript/form-control.js' %}"></script>
 {% block js %}
 {% endblock js%}
 </body>
