--- a/templates/base.html
+++ b/templates/base.html
@@ -152,7 +152,7 @@
     <!-- /.container -->
   </footer>
 <script src="{% static 'javascript/menu.js' %}"></script>
-<script src="{% static 'javascript/form-style.js' %}"></script>
+<script src="{% static 'javascript/forms-style.js' %}"></script>
 {% block js %}
 {% endblock js%}
 </body>
