--- a/templates/base.html
+++ b/templates/base.html
@@ -79,17 +79,18 @@
       <div class="col-md-4">
 
         <!-- Search Widget -->
-        <div class="card my-4">
+        <form action="search" method="GET" class="card my-4">
+          {% csrf_token %}
           <h5 class="card-header">Search</h5>
           <div class="card-body">
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search for...">
+              <input name='fsearch' type="text" class="form-control" placeholder="Search for...">
               <span class="input-group-append">
-                <button class="btn btn-secondary" type="button">Go!</button>
+                <button class="btn btn-secondary" type="submit">Go!</button>
               </span>
             </div>
           </div>
-        </div>
+        </form>
 
         <!-- Categories Widget -->
         <div class="card my-4">
