add text editor

--- a/static/style/navbar.css
+++ b/static/style/navbar.css
@@ -6,3 +6,8 @@
   color: #fff !important;
   font-weight: bold;
 }
+#navbarDropdown {
+  color: #fff !important;
+  font-weight: bold;
+  cursor: pointer;
+}
