--- a/templates/manage/new_blog.html
+++ b/templates/manage/new_blog.html
@@ -4,11 +4,16 @@
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">New blog</legend>
-      {{ form | crispy }}
+      {{form.media}} {{ form.as_p}}
     </fieldset>
     <div class="form-group">
       <button class="btn btn-outline-info" type="submit">save</button>
     </div>
   </form>
 </div>
+<style>
+  #cke_id_content {
+    width: 166% !important;
+  }
+</style>
 {% endblock content %}
