polish blog snippets

--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
           <a class="dropdown-item" href="{% url 'new_blog' %}">Add new post</a>
           <a class="dropdown-item" href="#">Edit posts</a>
           <a class="dropdown-item" href="{% url 'new_categorie' %}">Add new categorie</a>
-              <a class="nav-link" href="{% url 'logout' %}">logout</a>
+          <a class="dropdown-item" href="{% url 'logout' %}">logout</a>
         </div>
       </li>
           {% endif %}
