--- a/templates/blog.html
+++ b/templates/blog.html
@@ -22,6 +22,9 @@
   article.media.content-section {
     display: flow-root;
   }
+  .media-body img {
+    width: 100% !important;
+  }
   #author-name {
     color: #343a40;
     font-weight: bold;
