--- a/templates/index.html
+++ b/templates/index.html
@@ -5,16 +5,11 @@
   <div class="col-md-12">
     <!-- Blog Post -->
     <div class="card mb-4">
-      <img
-        class="card-img-top"
-        src="http://placehold.it/750x300"
-        alt="Card image cap"
-      />
       <div class="card-body">
         <h2 class="card-title">
           <a href="{% url 'post' post.post_id %}">{{post.title}}</a>
         </h2>
-        <p class="card-text">{{post.content|safe}}</p>
+        <div class="card-text">{{post.content|safe}}</div>
         <a href="{% url 'post' post.post_id %}" class="btn btn-primary"
           >Read More &rarr;</a
         >
