--- a/templates/manage/new_blog.html
+++ b/templates/manage/new_blog.html
@@ -13,7 +13,10 @@
 </div>
 <style>
   #cke_id_content {
-    width: 166% !important;
+    width: 164% !important;
+  }
+  .django-ckeditor-widget {
+    width: 61%;
   }
 </style>
 {% endblock content %}
