--- a/templates/base.html
+++ b/templates/base.html
@@ -91,31 +91,16 @@
           <h5 class="card-header">Categories</h5>
           <div class="card-body">
             <div class="row">
-              <div class="col-lg-6">
+          <div class="col-lg-6">
                 <ul class="list-unstyled mb-0">
+                  {% if categories %}
+                  {% for categorie in categories %}
                   <li>
-                    <a href="#">Web Design</a>
+                  <a href="#">{{categorie}}</a>
                   </li>
-                  <li>
-                    <a href="#">HTML</a>
-                  </li>
-                  <li>
-                    <a href="#">Freebies</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul class="list-unstyled mb-0">
-                  <li>
-                    <a href="#">JavaScript</a>
-                  </li>
-                  <li>
-                    <a href="#">CSS</a>
-                  </li>
-                  <li>
-                    <a href="#">Tutorials</a>
-                  </li>
-                </ul>
+                  {% endfor %}
+                  {% endif %}
+                  </ul>
               </div>
             </div>
           </div>
