--- a/templates/manage/new_blog.html
+++ b/templates/manage/new_blog.html
@@ -3,7 +3,7 @@
   <form method="POST">
     {% csrf_token %}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">New blog</legend>
+      <legend class="border-bottom mb-4">{{ role }}</legend>
       {{form.media}} {{ form.as_p}}
     </fieldset>
     <div class="form-group">
