--- a/templates/blog.html
+++ b/templates/blog.html
@@ -17,12 +17,22 @@
     </div>
   </div>
   <legend>Comments</legend>
+  <form action="POST" class="card py-2">
+    {% csrf_token %} Name:
+    <input name="name" type="text" class="form-control" />
+    Email:
+    <input name="email" type="text" class="form-control" />
+    Comment:
+    <textarea name="body" class="form-control"></textarea><br />
+    <button class="btn btn-secondary" type="submit">submit</button>
+  </form>
   {% if not comments %}
   <div id="comments">0 comments</div>
   <p>No comments</p>
   {% else %} {% endif %} {% for comment in comments %}
   <div class="comment">
-    {{ comment.user }} on {{comment.date_posted|date:"F d, Y" }}
+    <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ comment.user }}</h5>
+    {{comment.date_posted|date:"F d, Y" }}
     <p>{{ comment.content }}</p>
   </div>
   {% endfor %}
@@ -52,6 +62,19 @@
     width: 100px;
     height: 100px;
     border-radius: 100%;
+  }
+  form.card.py-2 {
+    padding: 3%;
+    line-height: 3;
+  }
+  .comment {
+    padding: 2%;
+    margin-top: 2%;
+    height: fit-content;
+    border: 0.1rem solid #343a40;
+  }
+  h5.h5.g-color-gray-dark-v1.mb-0 {
+    font-weight: bold;
   }
 </style>
 {% endblock %}
