--- a/templates/blog.html
+++ b/templates/blog.html
@@ -68,11 +68,14 @@
     padding: 2%;
     line-height: 2;
   }
+  textarea.form-control {
+    height: 150px;
+  }
   .comment {
     padding: 2%;
     margin-top: 2%;
     height: fit-content;
-    border: 0.1rem solid #343a40;
+    border: 1px solid rgba(0, 0, 0, 0.125);
   }
   h5.h5.g-color-gray-dark-v1.mb-0 {
     font-weight: bold;
