--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,6 @@
   </div>
   {% endfor %}
 </div>
-{% endblock %} {% block js %}
+{% include "components/pagination.html" %} {% endblock %} {% block js %}
 <script src="{% static 'javascript/shortText.js' %}"></script>
 {% endblock js%}
