--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -25,7 +25,7 @@
                   {% if categories %}
                   {% for categorie in categories %}
                   <li>
-                  <a href="#">{{categorie}}</a>
+                  <a href="#">{{categorie.categorie}} ({{categorie.count}})</a>
                   </li>
                   {% endfor %}
                   {% endif %}
