--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -4,10 +4,10 @@
         <!-- Search Widget -->
         <form action="search" method="GET" class="card my-4">
           {% csrf_token %}
-          <h5 class="card-header">Search</h5>
+          <h5 cilass="card-header">Search</h5>
           <div class="card-body">
             <div class="input-group">
-              <input name='fsearch' type="text" class="form-control" placeholder="Search for...">
+              <input name='fsearch' type="text" required="required" class="form-control" placeholder="Search for...">
               <span class="input-group-append">
                 <button class="btn btn-secondary" type="submit">Go!</button>
               </span>
