--- a/templates/blog.html
+++ b/templates/blog.html
@@ -35,6 +35,7 @@
       type="email"
       class="form-control"
       required="required"
+      title="entre valid email"
     />
     Comment:
     <textarea
