--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,11 @@
 <head>
     {% load static %}
     <meta charset="UTF-8">
+    {% if not title %}
     <title>Blog</title>
+    {% else %}
+    <title>{{title}}</title>
+    {% endif %}
     <!--link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous"-->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://file.myfontastic.com/3b3ESU8AsYhtxDfNypk6JY/icons.css" rel="stylesheet">
