--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -4,7 +4,7 @@
         <!-- Search Widget -->
         <form action="search" method="GET" class="card my-4">
           {% csrf_token %}
-          <h5 cilass="card-header">Search</h5>
+          <h5 class="card-header">Search</h5>
           <div class="card-body">
             <div class="input-group">
               <input name='fsearch' type="text" required="required" class="form-control" placeholder="Search for...">
