--- a/templates/author/login.html
+++ b/templates/author/login.html
@@ -11,4 +11,13 @@
     </div>
   </form>
 </div>
+<style>
+  main {
+    height: 74vh;
+  }
+
+  .col-md-4 {
+    display: none;
+  }
+</style>
 {% endblock content %}
