--- a/templates/categorie_posts.html
+++ b/templates/categorie_posts.html
@@ -23,6 +23,40 @@
   </div>
   {% endfor %}
 </div>
-{% include "components/pagination.html" %} {% endblock %} {% block js %}
+<nav id="pagination" aria-label="Page navigation example">
+  <ul class="pagination">
+    {% if categorie_posts.has_previous %}
+    <li class="page-item">
+      <a
+        class="page-link"
+        href="?page={{ categorie_posts.previous_page_number }}"
+        >Previous</a
+      >
+    </li>
+    {% endif %} {% for page_number in categorie_posts.paginator.page_range %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{page_number}}">{{page_number}}</a>
+    </li>
+    {% endfor %} {% if categorie_posts.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ categories_posts.next_page_number }}"
+        >Next</a
+      >
+    </li>
+    {% endif %}
+  </ul>
+</nav>
+<style>
+  #pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .page-link {
+    color: #343a40;
+    font-weight: bold;
+  }
+</style>
+{% endblock %} {% block js %}
 <script src="{% static 'javascript/shortText.js' %}"></script>
 {% endblock js%}
