--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,28 @@
   </div>
   {% endfor %}
 </div>
-{% include "components/pagination.html" %} {% endblock %} {% block js %}
+{% include "components/pagination.html" %}
+<nav id="pagination" aria-label="Page navigation example">
+  <ul class="pagination">
+    {% if posts.has_previous %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ posts.previous_page_number }}"
+        >Previous</a
+      >
+    </li>
+    {% endif %} {% for page_number in posts.paginator.page_range %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{page_number}}">{{page_number}}</a>
+    </li>
+    {% endfor %} {% if posts.has_next %}
+    <li class="page-item">
+      <a class="page-link" href="?page={{ posts.next_page_number }}">Next</a>
+    </li>
+    {% endif %}
+  </ul>
+</nav>
+
+{% endblock %} {% block js %}
+
 <script src="{% static 'javascript/shortText.js' %}"></script>
 {% endblock js%}
