--- a/templates/categorie_posts.html
+++ b/templates/categorie_posts.html
@@ -35,11 +35,11 @@
     </li>
     {% endif %} {% for page_number in categorie_posts.paginator.page_range %}
     <li class="page-item">
-      <a class="page-link" href="?page={{page_number}}">{{page_number}}</a>
+      <a class="page-link" href="/?page={{page_number}}">{{page_number}}</a>
     </li>
     {% endfor %} {% if categorie_posts.has_next %}
     <li class="page-item">
-      <a class="page-link" href="?page={{ categories_posts.next_page_number }}"
+      <a class="page-link" href="/?page={{ categories_posts.next_page_number }}"
         >Next</a
       >
     </li>
