--- a/templates/components/sidebar.html
+++ b/templates/components/sidebar.html
@@ -2,7 +2,7 @@
       <div class="col-md-4">
 
         <!-- Search Widget -->
-        <form action="search" method="GET" class="card my-4">
+        <form action="/search" method="GET" class="card my-4">
           {% csrf_token %}
           <h5 class="card-header">Search</h5>
           <div class="card-body">
