--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -37,13 +37,14 @@
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'home' %}">Home </a>
         </li>
+        {% if not user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link" href="{% url 'about' %}">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
         </li>
-        {% if user.is_authenticated %}
+        {% else %}
         <li class="nav-item dropdown">
           <div
             class="nav-link dropdown-toggle"
@@ -61,10 +62,7 @@
             <a class="dropdown-item" href="{% url 'new_blog' %}"
               >Add new post</a
             >
-            <a class="dropdown-item" href="#">Edit posts</a>
-            <a class="dropdown-item" href="{% url 'new_categorie' %}"
-              >Add new categorie</a
-            >
+            <a class="dropdown-item" href="#">My profile</a>
             <a class="dropdown-item" href="{% url 'logout' %}">logout</a>
           </div>
         </li>
